# simlog

./: .env  .gitignore  README.md
backend/: docker-compose.yml
backend/simlog_ai_service/: Dockerfile  requirements.txt
backend/simlog_ai_service/src/: handlers.py  main.py  models.py  router.py
backend/simlog_backend/: .dockerignore  Cargo.toml  Dockerfile
backend/simlog_backend/migrations/: 20260702234938_create_flights_table.sql
backend/simlog_backend/src/: flight.rs  handlers.rs  main.rs  models.rs  router.rs  server.rs
frontend/simlog_frontend/: index.html  package-lock.json  package.json
frontend/simlog_frontend/src/: App.jsx
frontend/simlog_frontend/src/components/: Header.jsx
frontend/simlog_frontend/src/pages/: AddFlight.jsx  AllFlights.jsx  Home.jsx
http_tests/simlog ai backend tests/: opencollection.yml
http_tests/simlog backend tests/: opencollection.yml
