[package]
name = "simlog_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "runtime-tokio-rustls", "macros", "chrono"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.7.0", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
dotenvy = "0.15.7"
